--- a/.gitlab/coverage.yml
+++ b/.gitlab/coverage.yml
@@ -6,10 +6,19 @@
 #
 ---
 coverage:
-  image: registry.gitlab.inria.fr/solverstack/docker/distrib
-  stage: analyse
-  tags: ["docker"]
-  script:
-    - tools/coverage.sh
   only:
     - merge_requests
+  interruptible: true
+  stage: analyse
+  script:
+    - tools/coverage.sh
+  coverage: /^\s*lines:\s*\d+.\d+\%/
+  artifacts:
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+    expire_in: 2 days
+    untracked: true
+    when: always
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
