--- a/.gitlab/pages.yml
+++ b/.gitlab/pages.yml
@@ -1,10 +1,9 @@
 ---
 pages:
-  image: registry.gitlab.inria.fr/solverstack/docker/distrib
   stage: deploy
   dependencies: []
   artifacts:
-    name: chameleon_doc
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
     expire_in: 1 week
     paths:
       - public
@@ -15,3 +14,4 @@ pages:
   only:
     - master@solverstack/chameleon
     - /^ci.*$/
+  interruptible: true
