--- a/.gitlab/release.yml
+++ b/.gitlab/release.yml
@@ -1,10 +1,9 @@
 ---
 release:
-  image: registry.gitlab.inria.fr/solverstack/docker/distrib
   stage: deploy
   dependencies: []
   artifacts:
-    name: chameleon_release
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
     expire_in: 1 week
     paths:
       - chameleon-*.tar.gz
