--- a/.gitlab/sonarqube.yml
+++ b/.gitlab/sonarqube.yml
@@ -1,19 +1,24 @@
 ---
 sonarqube:
   stage: analyse
-  tags: ["docker","linux"]
-  artifacts:
-    name: chameleon_analysis
-    expire_in: 1 week
-    paths:
-      - chameleon_coverage.xml
-      - chameleon_cppcheck.xml
-      - chameleon_rats.xml
-      - sonar.log
+  extends:
+    - .only-master
   variables:
     VERSION: sonarqube
   script:
     - cat *.log > chameleon_build.log
     - ./tools/analysis.sh
-  extends:
-    - .only-master
+  coverage: /^\s*lines:\s*\d+.\d+\%/
+  artifacts:
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+    expire_in: 2 days
+    when: always
+    paths:
+      - coverage.xml
+      - chameleon_coverage.xml
+      - chameleon_cppcheck.xml
+      - sonar.log
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
