--- a/.gitlab/test_starpu_simgrid.yml
+++ b/.gitlab/test_starpu_simgrid.yml
@@ -2,17 +2,7 @@
 .test_starpu_simgrid_template: &test_starpu_simgrid
   extends: .test_script_template
   needs: [build_starpu_simgrid]
-  dependencies:
-    - build_starpu_simgrid
-  artifacts:
-    name: test_starpu_simgrid
-    expire_in: 48 hours
-    paths:
-      - build_starpu_simgrid
-      - chameleon_starpu_simgrid_*.log
-      - chameleon_starpu_simgrid_*.lcov
-    reports:
-      junit: report.xml
+  dependencies: [build_starpu_simgrid]
 
 .test_starpu_simgrid_template_master: &test_starpu_simgrid_master
   extends:
