--- a/.gitlab/test_starpu.yml
+++ b/.gitlab/test_starpu.yml
@@ -87,9 +87,11 @@ test_starpu_shm_s_macosx:
   variables:
     VERSION: starpu
   script:
-    - cd build-starpu && ctest -R test_shm_s -T Test | tee -a ../chameleon_macosx.log
+    - cd build-starpu && ctest --no-compress-output -R test_shm_s -T Test --output-junit ../chameleon_macosx.junit | tee -a ../chameleon_macosx.log
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
-    untracked: true
+    paths: ['chameleon_macosx.log']
     expire_in: 2 days
     when: always
+    reports:
+      junit: chameleon_macosx.junit
