--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -222,6 +222,7 @@ set(RUNTIME_COMMON
   control/runtime_context.c
   control/runtime_control.c
   control/runtime_descriptor.c
+  control/runtime_tags.c
   control/runtime_options.c
   control/runtime_profiling.c
   control/runtime_workspace.c
