--- a/.gitlab/sonarqube.yml
+++ b/.gitlab/sonarqube.yml
@@ -3,6 +3,18 @@ sonarqube:
   stage: analyse
   extends:
     - .only-master
+  needs: [test_openmp_shm_c,test_openmp_shm_d,test_openmp_shm_s,test_openmp_shm_z,
+          test_parsec_shm_c,test_parsec_shm_d,test_parsec_shm_s,test_parsec_shm_z,
+          test_quark_shm_c,test_quark_shm_d,test_quark_shm_s,test_quark_shm_z,
+          test_starpu_shm_c,test_starpu_shm_d,test_starpu_shm_s,test_starpu_shm_z,
+          test_starpu_mpi_c,test_starpu_mpi_d,test_starpu_mpi_s,test_starpu_mpi_z,
+          test_starpu_simgrid_simu_all]
+  dependencies: [test_openmp_shm_c,test_openmp_shm_d,test_openmp_shm_s,test_openmp_shm_z,
+                 test_parsec_shm_c,test_parsec_shm_d,test_parsec_shm_s,test_parsec_shm_z,
+                 test_quark_shm_c,test_quark_shm_d,test_quark_shm_s,test_quark_shm_z,
+                 test_starpu_shm_c,test_starpu_shm_d,test_starpu_shm_s,test_starpu_shm_z,
+                 test_starpu_mpi_c,test_starpu_mpi_d,test_starpu_mpi_s,test_starpu_mpi_z,
+                 test_starpu_simgrid_simu_all]
   variables:
     VERSION: sonarqube
   script:
