--- a/.gitlab/test_starpu.yml
+++ b/.gitlab/test_starpu.yml
@@ -90,8 +90,8 @@ test_starpu_shm_s_macosx:
     - cd build-starpu && ctest --no-compress-output -R test_shm_s -T Test --output-junit ../chameleon_macosx.junit | tee -a ../chameleon_macosx.log
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
-    paths: ['chameleon_macosx.log']
     expire_in: 2 days
+    untracked: true
     when: always
     reports:
       junit: chameleon_macosx.junit
