gitlab-ci: replace only/except (not highly maintained) by rules keyword

--- a/.gitlab/coverage.yml
+++ b/.gitlab/coverage.yml
@@ -6,8 +6,7 @@
 #
 ---
 coverage:
-  only:
-    - merge_requests
+  extends: .only-merge-request
   interruptible: true
   stage: analyse
   script:
