--- a/.gitlab/release.yml
+++ b/.gitlab/release.yml
@@ -1,6 +1,8 @@
 ---
 release:
   stage: deploy
+  rules:
+    - if: $CI_COMMIT_BRANCH =~ /^release-.*$/ && $CI_PIPELINE_SOURCE != "schedule"
   dependencies: []
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
@@ -11,7 +13,3 @@ release:
     VERSION: release
   script:
     - ./tools/release.sh
-  only:
-    - /^release-.*$/
-  except:
-    - schedules
