--- a/.gitlab/test_openmp.yml
+++ b/.gitlab/test_openmp.yml
@@ -12,7 +12,7 @@
 .test_openmp_template_branches: &test_openmp_branches
   extends:
     - .test_openmp_template
-    - .only-branches
+    - .only-merge-request
 
 test_openmp_shm_s:
   <<: *test_openmp_master
