--- a/.gitlab/test_parsec.yml
+++ b/.gitlab/test_parsec.yml
@@ -12,7 +12,7 @@
 .test_parsec_template_branches: &test_parsec_branches
   extends:
     - .test_parsec_template
-    - .only-branches
+    - .only-merge-request
 
 test_parsec_shm_s:
   <<: *test_parsec_master
