--- a/.gitlab/test_quark.yml
+++ b/.gitlab/test_quark.yml
@@ -12,7 +12,7 @@
 .test_quark_template_branches: &test_quark_branches
   extends:
     - .test_quark_template
-    - .only-branches
+    - .only-merge-request
 
 test_quark_shm_s:
   <<: *test_quark_branches
