--- a/.gitlab/test_starpu.yml
+++ b/.gitlab/test_starpu.yml
@@ -12,7 +12,7 @@
 .test_starpu_template_branches: &test_starpu_branches
   extends:
     - .test_starpu_template
-    - .only-branches
+    - .only-merge-request
 
 test_starpu_shm_s:
   <<: *test_starpu_master
@@ -79,7 +79,7 @@ test_starpu_mpi_z:
     TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
 
 test_starpu_shm_s_macosx:
-  extends: .only-branches
+  extends: .only-merge-request
   stage: test
   tags: ['macosx']
   needs: [build_starpu_macosx]
