At least one job must be run so that any merge request get a pipeline status (mandatory to accept the merge request)

--- a/.gitlab/preliminary.yml
+++ b/.gitlab/preliminary.yml
@@ -4,7 +4,10 @@
 ---
 preliminary_checks:
   stage: .pre
-  extends: .only-merge-request
+  interruptible: true
+  rules:
+    - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH =~ /^ci-.*$/) && $CI_PIPELINE_SOURCE != "schedule"
+    - if: $CI_MERGE_REQUEST_IID && $CI_PIPELINE_SOURCE != "schedule"
   parallel:
     matrix:
       - TEST: [rebase, draft, header]
