preliminary_checks must be standard job from a standard stage, not a builtin one, so that the trick with notest- branches for merge request works

--- a/.gitlab/preliminary.yml
+++ b/.gitlab/preliminary.yml
@@ -3,7 +3,7 @@
 #
 ---
 preliminary_checks:
-  stage: .pre
+  stage: pre
   interruptible: true
   rules:
     - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH =~ /^ci-.*$/) && $CI_PIPELINE_SOURCE != "schedule"
