starpu/interface/cppi: Add a CHAM_pivot_t interface to manage pivoting reduction and data exchanges

--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -228,6 +228,7 @@ set(RUNTIME_COMMON
   control/runtime_profiling.c
   control/runtime_workspace.c
   interface/cham_tile_interface.c
+  interface/cppi_interface.c
   ${RUNTIME_COMMON_GENERATED}
   )
 
