--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -19,6 +19,7 @@
  * @author Samuel Thibault
  * @author Loris Lucido
  * @author Terry Cojean
+ * @author Matthieu Kuhn
  * @date 2023-08-22
  *
  */
@@ -95,6 +96,7 @@
 #include "runtime_codelet_profile.h"
 #include "runtime_workspace.h"
 #include "cham_tile_interface.h"
+#include "cppi_interface.h"
 
 typedef struct starpu_schedopt_s
 {
