--- a/.gitlab/common.yml
+++ b/.gitlab/common.yml
@@ -38,7 +38,7 @@ default:
   stage: test
   script:
     - ./.gitlab/test.sh
-  coverage: /^\s*lines:\s*\d+.\d+\%/
+  coverage: /^\s*lines......:\s*\d+.\d+\%/
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
     expire_in: 2 days
