--- a/lib/pkgconfig/hipblas.pc.in
+++ b/lib/pkgconfig/hipblas.pc.in
@@ -1,23 +1,23 @@
 #
-#  @file cudablas.pc
+#  @file hipblas.pc
 #
 #  @copyright 2016-2023 Bordeaux INP, CNRS (LaBRI UMR 5800), Inria,
 #                       Univ. Bordeaux. All rights reserved.
 #
 #  @version 1.2.0
 #  @author Florent Pruvost
-#  @date 2022-02-22
+#  @date 2023-05-03
 #
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 includedir=${exec_prefix}/include
 
-Name: cudablas
-Description: Interface to cuBLAS routines + some other auxiliary routines
+Name: hipblas
+Description: Interface to hipBLAS routines + some other auxiliary routines
 Version: @CHAMELEON_VERSION_MAJOR@.@CHAMELEON_VERSION_MINOR@.@CHAMELEON_VERSION_MICRO@
-Cflags: @CUDABLAS_PKGCONFIG_DEFINITIONS@ -I${includedir}
-Libs: -L${libdir} @CUDABLAS_PKGCONFIG_LIBS@
-Libs.private: @CUDABLAS_PKGCONFIG_LIBS_PRIVATE@
-Requires: @CUDABLAS_PKGCONFIG_REQUIRED@
-Requires.private: @CUDABLAS_PKGCONFIG_REQUIRED_PRIVATE@
+Cflags: @HIPBLAS_PKGCONFIG_DEFINITIONS@ -I${includedir}
+Libs: -L${libdir} @HIPBLAS_PKGCONFIG_LIBS@
+Libs.private: @HIPBLAS_PKGCONFIG_LIBS_PRIVATE@
+Requires: @HIPBLAS_PKGCONFIG_REQUIRED@
+Requires.private: @HIPBLAS_PKGCONFIG_REQUIRED_PRIVATE@
