--- a/cmake_modules/CHAMELEONConfig.cmake.in
+++ b/cmake_modules/CHAMELEONConfig.cmake.in
@@ -11,6 +11,9 @@ check_required_components(CHAMELEON)
 
 # dependencies of CHAMELEON
 include("${CMAKE_CURRENT_LIST_DIR}/mTargets.cmake")
+if (EXISTS "${CMAKE_CURRENT_LIST_DIR}/threadsTargets.cmake")
+  include("${CMAKE_CURRENT_LIST_DIR}/threadsTargets.cmake")
+endif()
 if (NOT @CHAMELEON_SIMULATION@)
   include("${CMAKE_CURRENT_LIST_DIR}/cblasTargets.cmake")
   include("${CMAKE_CURRENT_LIST_DIR}/lapackeTargets.cmake")
