compute/gered: Add a function to adapt automatically the tile precision

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -114,6 +114,10 @@ set(CODELETS_ZSRC
     # Reduction methods
     ##################
     codelets/codelet_zgersum.c
+    ##################
+    # Precision modification kernels
+    ##################
+    codelets/codelet_zgered.c
     )
 
 set(CODELETS_SRC
