compute/gerst: Add a function to restore the initial precision of a given matrix

--- a/compute/CMakeLists.txt
+++ b/compute/CMakeLists.txt
@@ -193,8 +193,10 @@ set(ZSRC
     ##################
     pzlag2c.c
     pzgered.c
+    pzgerst.c
     ###
     zgered.c
+    zgerst.c
     #zcgels.c
     #zcgesv.c
     #zcposv.c
