--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -118,6 +118,7 @@ set(CODELETS_ZSRC
     # Precision modification kernels
     ##################
     codelets/codelet_zgered.c
+    codelets/codelet_zgerst.c
     )
 
 set(CODELETS_SRC
