starpu/codelets/convert: add a conversion codelet to automatically change the precision on request

--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -250,6 +250,11 @@ precisions_rules_py(RUNTIME_SRCS_GENERATED "${ZSRC}"
   PRECISIONS "${CHAMELEON_PRECISION}"
   TARGETDIR "codelets")
 
+set(CODELETS_SRC
+  codelets/codelet_convert.c
+  ${CODELETS_SRC}
+  )
+
 set(RUNTIME_SRCS
   ${RUNTIME_COMMON}
   ${RUNTIME_SRCS_GENERATED}
