starpu/descriptor: Add a runtime_data_getaddr_withconversion function

--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -116,6 +116,10 @@ static inline int cham_to_starpu_access( cham_access_t accessA ) {
     return accessA;
 }
 
+void *RUNTIME_data_getaddr_withconversion( const RUNTIME_option_t *options,
+                                           cham_access_t access, cham_flttype_t flttype,
+                                           const CHAM_desc_t *A, int m, int n );
+
 /*
  * MPI Redefinitions
  */
