include: Add the CHAMELEON_PREC_... variable to config.h to enable simpler detection of the arithmetics that are enabled or not.

--- a/include/chameleon/config.h.in
+++ b/include/chameleon/config.h.in
@@ -57,6 +57,14 @@
 #cmakedefine CHAMELEON_USE_CUBLAS
 #cmakedefine CHAMELEON_USE_HIP
 
+/* Arithmetics support */
+#cmakedefine CHAMELEON_PREC_S
+#cmakedefine CHAMELEON_PREC_D
+#cmakedefine CHAMELEON_PREC_C
+#cmakedefine CHAMELEON_PREC_Z
+#cmakedefine CHAMELEON_PREC_DS
+#cmakedefine CHAMELEON_PREC_ZC
+
 /* Hmat-oss */
 #cmakedefine CHAMELEON_USE_HMAT
 
