--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -19,7 +19,7 @@
  * @author Samuel Thibault
  * @author Loris Lucido
  * @author Terry Cojean
- * @date 2023-07-06
+ * @date 2023-08-22
  *
  */
 #ifndef _chameleon_starpu_h_
@@ -165,6 +165,9 @@ void    chameleon_starpu_tag_release( int64_t min );
 #define RTBLKADDR( desc, type, m, n ) ( (starpu_data_handle_t)RUNTIME_data_getaddr( desc, m, n ) )
 
 void RUNTIME_set_reduction_methods(starpu_data_handle_t handle, cham_flttype_t dtyp);
+
+#include "runtime_mpi.h"
+#include "runtime_wontuse.h"
 
 #if defined(CHAMELEON_USE_MPI) && defined(HAVE_STARPU_MPI_CACHED_RECEIVE)
 static inline int
