--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -297,7 +297,7 @@ include(CTestLists.cmake)
 # copy input files
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/input DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-if ( CHAMELEON_USE_HMAT AND (NOT CHAMELEON_SIMULATION) AND CHAMELEON_USE_MPI )
+if ( CHAMELEON_USE_HMATOSS AND (NOT CHAMELEON_SIMULATION) AND CHAMELEON_USE_MPI )
 
   add_subdirectory( test_fembem )
 
