--- a/include/chameleon/config.h.in
+++ b/include/chameleon/config.h.in
@@ -66,7 +66,7 @@
 #cmakedefine CHAMELEON_PREC_ZC
 
 /* Hmat-oss */
-#cmakedefine CHAMELEON_USE_HMAT
+#cmakedefine CHAMELEON_USE_HMATOSS
 
 /* Simulation */
 #cmakedefine CHAMELEON_SIMULATION
